--- a/projet/composer.json
+++ b/projet/composer.json
@@ -7,7 +7,7 @@
         "ext-iconv": "*",
         "cocur/slugify": "^3.1",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "*",
+        "symfony/asset": "4.1.*",
         "symfony/console": "*",
         "symfony/debug": "*",
         "symfony/expression-language": "*",
