--- a/projet/config/services.yaml
+++ b/projet/config/services.yaml
@@ -4,7 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
+    locale: 'fr'
+    company_name: 'Eco Logis'
+    language: 'fr'
 
 services:
     # default configuration for services in *this* file
