--- a/projet/config/packages/security.yaml
+++ b/projet/config/packages/security.yaml
@@ -29,7 +29,8 @@ security:
                 # following line to always enable it.
                 #always_remember_me: true
 
-
+            logout:
+                path:   logout
             # activate different ways to authenticate
 
             # http_basic: true
@@ -41,5 +42,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: ROLE_USER }
