--- a/projet/composer.json
+++ b/projet/composer.json
@@ -7,23 +7,24 @@
         "ext-iconv": "*",
         "cocur/slugify": "^3.1",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "4.1.*",
+        "symfony/asset": "^4.0",
         "symfony/console": "*",
         "symfony/debug": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "^1.1",
-        "symfony/form": "4.1.*",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
         "symfony/process": "*",
-        "symfony/security-bundle": "4.1.*",
+        "symfony/security-bundle": "^4.0",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "4.1.*",
+        "symfony/translation": "^4.0",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
+        "symfony/workflow": "^4.0",
         "symfony/yaml": "*"
     },
     "require-dev": {
@@ -80,7 +81,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.1.*"
+            "require": "^4.0"
         }
     }
 }
