--- a/projet/composer.json
+++ b/projet/composer.json
@@ -24,6 +24,7 @@
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
+        "symfony/webpack-encore-bundle": "^1.1",
         "symfony/workflow": "^4.0",
         "symfony/yaml": "*"
     },
