--- a/projet/composer.json
+++ b/projet/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "cboden/ratchet": "^0.4.1",
         "cocur/slugify": "^3.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.0",
