--- a/projet/package.json
+++ b/projet/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.7.2",
         "@symfony/webpack-encore": "^0.22.0",
         "jquery": "^3.3.1",
         "less-loader": "4.1.0",
