--- a/projet/config/packages/security.yaml
+++ b/projet/config/packages/security.yaml
@@ -45,3 +45,6 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/about, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_ADMIN:     ROLE_USER
+        ROLE_WORKER:    ROLE_USER
